# client/swagger.json
@@ -158,36 +158,31 @@
             }
           }
         }
-      }
-    },
-    "/Order/{id}": {
-      "get": {
+      },
+      "put": {
         "tags": [
           "Order"
         ],
-        "operationId": "Order_GetOrdersByUser",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "x-position": 1
-          }
-        ],
+        "operationId": "Order_ChangeOrderStatus",
+        "requestBody": {
+          "x-name": "orderDto",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/OrderDto"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
         "responses": {
           "200": {
             "description": "",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/OrderDto"
-                  }
+                  "$ref": "#/components/schemas/OrderDto"
                 }
               }
             }
@@ -449,8 +444,8 @@
           "id": {
             "type": "integer",
             "format": "int32",
-            "maximum": 2147483647.0,
-            "minimum": 1.0
+            "maximum": 2147483647,
+            "minimum": 1
           },
           "name": {
             "type": "string"
@@ -472,6 +467,10 @@
         "type": "object",
         "additionalProperties": false,
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "customerId": {
             "type": "integer",
             "format": "int32"
